correct border parameters and text alignment for container-2 elements

--- a/style.css
+++ b/style.css
@@ -88,16 +88,30 @@ a {
     font-size: 36px;
     font-weight: 900;
     text-align: center;
+    margin-top: 48px;
+    margin-bottom: 48px;
 }
 
 .container-2 {
     display: flex;
     justify-content: center;
+    gap: 62px;
+    margin-bottom: 72px;
+}
+
+.square-info {
+    max-width: 160px;
+    text-align: center;
 }
 
 .square {
-    border:4px solid #3882f6;
-    border-radius: 8px;
-    width: 200px;
-    height: 200px;
+    border:6px solid #3882f6;
+    border-radius: 14px;
+    width: 150px;
+    height: 150px;
+    margin-bottom: 8px;
+}
+
+.info {
+    color: gray;
 }
